--- a/infra/k8s/orders-depl.yaml
+++ b/infra/k8s/orders-depl.yaml
@@ -16,16 +16,16 @@ spec:
         - name: orders
           image: seinzk/orders
           env:
-            - name: NATS_URL
-              value: http://nats-srv:4222
-            - name: NATS_CLUSTER_ID
-              value: ticketing
             - name: NATS_CLIENT_ID
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+            - name: NATS_URL
+              value: 'http://nats-srv:4222'
+            - name: NATS_CLUSTER_ID
+              value: ticketing
             - name: MONGO_URI
-              value: mongodb://orders-mongo-srv:27017/orders
+              value: 'mongodb://orders-mongo-srv:27017/orders'
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
