--- a/server/expiration/package.json
+++ b/server/expiration/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tickets",
+  "name": "expiration",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -18,17 +18,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/cookie-session": "^2.0.49",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.7",
     "@vkorg/ticketing-common": "^1.0.23",
-    "cookie-session": "^2.1.0",
-    "express": "^4.21.0",
-    "express-async-errors": "^3.1.1",
-    "express-validator": "^7.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.3",
-    "mongoose-update-if-current": "^1.4.0",
+    "bull": "^4.16.5",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
@@ -36,12 +27,8 @@
   "devDependencies": {
     "@eslint/js": "^9.11.0",
     "@types/jest": "^29.5.13",
-    "@types/supertest": "^6.0.2",
     "eslint": "^9.11.0",
-    "globals": "^15.9.0",
     "jest": "^29.7.0",
-    "mongodb-memory-server": "^10.0.1",
-    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "typescript-eslint": "^8.6.0"
   }
