--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -31,6 +31,14 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: seinzk/expiration
+      context: server/expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     - image: seinzk/client
       context: client
       docker:
