--- a/client/package.json
+++ b/client/package.json
@@ -5,21 +5,16 @@
   "scripts": {
     "dev": "next"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "next": "^14.2.15",
+    "next": "^14.2.13",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.12.0",
-    "eslint": "^9.12.0",
-    "eslint-plugin-react": "^7.37.1",
-    "globals": "^15.11.0"
+    "react-dom": "^18.3.1",
+    "react-stripe-checkout": "^2.6.3"
   }
 }
