--- a/.github/workflows/tests-auth.yml
+++ b/.github/workflows/tests-auth.yml
@@ -1,7 +1,9 @@
 name: tests-auth
 
 on:
-  pull_request
+  pull_request:
+    paths:
+      - 'server/auth/**'
 
 jobs:
   build:
@@ -9,4 +11,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: cd server/auth && npm i && npm run test:ci
-      
+
