fix: package.lock files

--- a/.github/workflows/tests-orders.yaml
+++ b/.github/workflows/tests-orders.yaml
@@ -3,25 +3,12 @@ name: tests-orders
 on:
   pull_request:
     paths:
-      - 'server/orders/**'
+      - 'server/auth/**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+      - run: cd server/orders && npm i && npm run test:ci
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '22'
-
-      - name: Install dependencies
-        working-directory: server/orders
-        run: npm install
-
-      - name: Run tests
-        working-directory: server/orders
-        run: npm run test:ci
